--- a/tree.html
+++ b/tree.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Namespace Padosoft\LaravelComposerSecurity | laravel-composer-security 1.4.x</title>
+	<title>Tree | laravel-composer-security 1.4.x</title>
 
 	<link rel="stylesheet" href="resources/bootstrap.min.css?973e37a8502921d56bc02bb55321f45b072b6f71">
 	<link rel="stylesheet" href="resources/style.css?49f43d3208c5d7e33fa16d36107a345bf11cc00d">
@@ -27,16 +27,15 @@
 				</form>
 
 				<ul class="nav navbar-nav">
-					<li class="active">
+					<li>
 <span>Namespace</span>					</li>
 					<li>
 <span>Class</span>					</li>
 
 					<li class="divider-vertical"></li>
 
-					<li>
-						<a href="tree.html" title="Tree view of classes, interfaces, traits and exceptions"><span>Tree</span></a>
-					</li>
+					<li class="active">
+<span>Tree</span>					</li>
 
 
 
@@ -51,12 +50,12 @@
 		<div id="groups">
 				<h3>Namespaces</h3>
 			<ul>
-					<li class="active">
+					<li>
 						<a href="namespace-Padosoft.html">
 							Padosoft<span></span>
 						</a>
 							<ul>
-					<li class="active">
+					<li>
 						<a href="namespace-Padosoft.LaravelComposerSecurity.html">
 							LaravelComposerSecurity						</a>
 							</li>
@@ -68,11 +67,11 @@
 		<div id="elements">
 			<h3>Classes</h3>
 			<ul>
-				<li><a href="class-Padosoft.LaravelComposerSecurity.ComposerSecurityCheck.html">ComposerSecurityCheck</a></li>
-				<li><a href="class-Padosoft.LaravelComposerSecurity.ComposerSecurityCheckServiceProvider.html">ComposerSecurityCheckServiceProvider</a></li>
-				<li><a href="class-Padosoft.LaravelComposerSecurity.FileHelper.html">FileHelper</a></li>
-				<li><a href="class-Padosoft.LaravelComposerSecurity.MailHelper.html">MailHelper</a></li>
-				<li><a href="class-Padosoft.LaravelComposerSecurity.SensiolabHelper.html">SensiolabHelper</a></li>
+				<li><a href="class-Padosoft.LaravelComposerSecurity.ComposerSecurityCheck.html">Padosoft\LaravelComposerSecurity\ComposerSecurityCheck</a></li>
+				<li><a href="class-Padosoft.LaravelComposerSecurity.ComposerSecurityCheckServiceProvider.html">Padosoft\LaravelComposerSecurity\ComposerSecurityCheckServiceProvider</a></li>
+				<li><a href="class-Padosoft.LaravelComposerSecurity.FileHelper.html">Padosoft\LaravelComposerSecurity\FileHelper</a></li>
+				<li><a href="class-Padosoft.LaravelComposerSecurity.MailHelper.html">Padosoft\LaravelComposerSecurity\MailHelper</a></li>
+				<li><a href="class-Padosoft.LaravelComposerSecurity.SensiolabHelper.html">Padosoft\LaravelComposerSecurity\SensiolabHelper</a></li>
 			</ul>
 
 
@@ -87,38 +86,48 @@
 
 <div id="right">
 	<div id="rightInner">
-<div id="content" class="namespace">
-	<h1>Namespace <a href="namespace-Padosoft.html">Padosoft</a>\LaravelComposerSecurity</h1>
+<div id="content">
+	<h1>Tree</h1>
 
+		<h2>Classes</h2>
+<div class="tree">
+	<ul>
 
+			<li><div class="notlast"><span>Illuminate\Console\Command</span>			
+			
+			</div>
 
-<div class="panel panel-default">
-    <div class="panel-heading"><h2>Classes summary</h2></div>
-	<table class="summary table table-bordered table-striped" id="classes">
-<tr>
-	<td class="name"><a href="class-Padosoft.LaravelComposerSecurity.ComposerSecurityCheck.html">ComposerSecurityCheck</a></td>
-	<td></td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Padosoft.LaravelComposerSecurity.ComposerSecurityCheckServiceProvider.html">ComposerSecurityCheckServiceProvider</a></td>
-	<td></td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Padosoft.LaravelComposerSecurity.FileHelper.html">FileHelper</a></td>
-	<td></td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Padosoft.LaravelComposerSecurity.MailHelper.html">MailHelper</a></td>
-	<td></td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Padosoft.LaravelComposerSecurity.SensiolabHelper.html">SensiolabHelper</a></td>
-	<td></td>
-</tr>
-	</table>
+				</li>
+
+			<li><div class="notlast"><span>Illuminate\Support\ServiceProvider</span>			
+			
+			</div>
+
+				</li>
+
+			<li><div class="notlast"><a href="class-Padosoft.LaravelComposerSecurity.FileHelper.html"><span>Padosoft\LaravelComposerSecurity\FileHelper</span></a>
+			
+			
+			</div>
+
+				</li>
+
+			<li><div class="notlast"><a href="class-Padosoft.LaravelComposerSecurity.MailHelper.html"><span>Padosoft\LaravelComposerSecurity\MailHelper</span></a>
+			
+			
+			</div>
+
+				</li>
+
+			<li class="last"><div class="last"><a href="class-Padosoft.LaravelComposerSecurity.SensiolabHelper.html"><span>Padosoft\LaravelComposerSecurity\SensiolabHelper</span></a>
+			
+			
+			</div>
+
+		</li>
+		
+	</ul>
 </div>
-
-
 
 
 
