--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@ protected function schedule(Schedule $schedule)
 <h1>Security</h1>
 <p>If you discover any security related issues, please email  instead of using the issue tracker.</p>
 <h1>API Documentation</h1>
-<p>Please see API documentation at <a href="http://padosoft.github.io/laravel-composer-security">http://padosoft.github.io/laravel-composer-security</a></p>
+<p>Please see API documentation at <a href="https://padosoft.github.io/laravel-composer-security">https://padosoft.github.io/laravel-composer-security</a></p>
 <ul>
 <li>
-<a href="http://padosoft.github.io/laravel-composer-security/build/master/">master</a>
+<a href="https://padosoft.github.io/laravel-composer-security/build/master/">master</a>
 </li>
 </ul>
 <h1>Credits</h1>
